k8s/pingfederate/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate-admin
  labels:
    app: pingfederate
    tier: admin
spec:
  replicas: 1
  selector:
      matchLabels:
        app: pingfederate
        tier: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pingfederate
        tier: admin
    spec:
      containers:
      - name: console-node
        image: pingidentity/pingfederate:10.0.0-alpine-edge
        ports:
        - containerPort: 9999
        - containerPort: 7600
        resources:
          requests:
            memory: "2.5Gi"
            cpu: "2"
          limits:
            memory: "2.5Gi"
            cpu: "2"
