k8s/pingfederate/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingfederate-admin
  labels:
    app: pingfederate
    tier: admin
spec:
  ports:
  - port: 9999
    protocol: TCP
  selector:
    app: pingfederate
    tier: admin
  sessionAffinity: None
